--- a/view/generals.html
+++ b/view/generals.html
@@ -56,6 +56,7 @@
                 container: '#container'
             });
             user_name = $('#name_input').val();
+            if (user_name == '') user_name = '=￣ω￣=';
         });
 
         player_status = 0;
