--- a/view/battle.html
+++ b/view/battle.html
@@ -57,13 +57,9 @@
         font-size:18px;
     }
 
-     {
-        display: flex;
-        justify-content: center;
-    } 
-
     #battle_tips {
-        font-size:22px;
+        font-size:1.5rem;
+        margin-top: 0;
     }
 
     #battle_button {
