--- a/view/index.html
+++ b/view/index.html
@@ -102,12 +102,12 @@
                 white-space: nowrap;
             }
 
-            a:hover #bg1{ background: #539770; }
+            /*a:hover #bg1{ background: #539770; }
             a:hover #bg2{ background: #4B7D74; }
             a:hover #bg3{ background: #8DC2BC; }
             a:hover #bg4{ background: #EDD6B4; }
             a:hover #bg5{ background: #BE7467; }
-            a:hover #bg6{ background: #E2AE63; }
+            a:hover #bg6{ background: #E2AE63; }*/
 
             .waifu {
                 left: 74%;
