--- a/view/generals.html
+++ b/view/generals.html
@@ -56,7 +56,7 @@
                 container: '#container'
             });
             user_name = $('#name_input').val();
-            if (user_name == '') user_name = '=￣ω￣=';
+            if (user_name == '') user_name = '(｡･∀･)ﾉﾞ';
         });
 
         player_status = 0;
