--- a/view/index.html
+++ b/view/index.html
@@ -164,6 +164,7 @@
         </div>
 
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
         <script src="/live2D/waifu-tips.js"></script>
         <script src="/live2D/live2d.js"></script>
         <script type="text/javascript">initModel("/live2D/")</script>
