--- a/view/generals.html
+++ b/view/generals.html
@@ -37,7 +37,7 @@
 </style>
 
 <div class="generals_title"><h1 class="generals_main_title">五&nbsp;&nbsp;&nbsp;子&nbsp;&nbsp;&nbsp;棋</h1></div>
-<div id="div_name_input"><input id="name_input" style='text' placeholder="请输入您的昵称"></input></div>
+<div id="div_name_input"><input id="name_input" style='text' placeholder="请输入您的昵称" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的昵称'"></input></div>
 <div class="div_button"><button class="button">START</button></div>
 
 <script>
