--- a/view/chat_room.html
+++ b/view/chat_room.html
@@ -1,33 +1,94 @@
 <style type="text/css">
-#messages {
-    list-style-type: none;
-    box-sizing: border-box;
-    margin: 0;
-}
 
-form { background: #000; padding: 3px; bottom: 0; width: 90%; }
-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages li:nth-child(odd) { background: #eee; }
+    * {
+        box-sizing: border-box;
+    }
+
+    #chat_window {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        list-style-type: none;
+        box-sizing: border-box;
+        margin-left: 100px;
+    }
+
+    #messages {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        list-style-type: none;
+        margin-top: 50px;
+    }
+
+    #messages li { 
+        padding: 5px 20px;
+        width:85%;
+    }
+
+    #messages li:nth-child(odd) { 
+        background: #eee;
+    }
+
+    #chat_form {
+        position: fixed;
+        top: 0;
+        background: #000;
+        width: 70%; 
+        padding: .3%;
+    }
+
+    #chat_form input {
+        border: 0; 
+        width: 90%; 
+        padding: .3%; 
+    }
+
+    #chat_form button {
+        width: 9%;
+        background: rgb(130, 224, 255);
+        border: none; 
+        padding: .3%;  
+        margin: .3%; 
+    }
+
 
 </style>
-
-
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-
+    <div id="chat_window">
+        <ul id="messages"></ul>
+        <form id="chat_form" action="">
+          <input id="m" autocomplete="off" type="text" /><button>Send</button>
+        </form>
+    </div>
 
 <script>
-    $(function(){
+    (function(){
+        if (player_status == 1 || player_status == 2)
+        {
+            socket.emit('leave');
+            player_status = 0;
+        }
+        else {
+            socket.open();
+        }
+
         $('form').submit(function(){
-            socket.emit('chat_message', $('#m').val());
+            socket.emit('chat_message', {
+                sender: user_name,    
+                msg: $('#m').val()
+            });
+
+            console.log('！'+ $('#m').val());
             $('#m').val('');
+
             return false;
         });
+
+        socket.off('chat_message');
         socket.on('chat_message', function(data){
             $('#messages').append($('<li>').text(data.sender + ': ' + data.msg));
+
+            console.log('#'+ data.sender + ': ' + data.msg);
         });
-    });
+    })();
 </script>
