--- a/view/index.html
+++ b/view/index.html
@@ -173,8 +173,8 @@
 
         <script>
             var is_white = false;
-            var user_name = '五子棋用户';
-            var enemy_name = '五子棋用户x';
+            var user_name = '(｡･∀･)ﾉﾞ';
+            var enemy_name = '(｡･∀･)ﾉﾞx';
             var room_id = '房间号';
             var player_status = 0;  //0：未游戏  1：游戏中 2：等待中
             var socket = io({autoConnect: false});
