--- a/view/chat_room.html
+++ b/view/chat_room.html
@@ -33,22 +33,23 @@
     #chat_form {
         position: fixed;
         top: 0;
-        background: #000;
-        width: 70%; 
+        right: 15%;
+        left: 10%;
+        background: #000; 
         padding: .3%;
     }
 
     #chat_form input {
         border: 0; 
         width: 90%; 
-        padding: .3%; 
+        padding: 10px; 
     }
 
     #chat_form button {
         width: 9%;
         background: rgb(130, 224, 255);
         border: none; 
-        padding: .3%;  
+        padding: 10px;  
         margin: .3%; 
     }
 
