--- a/view/generals.html
+++ b/view/generals.html
@@ -46,10 +46,10 @@
         if ($.cookie('user_name'))
             $('#name_input').val($.cookie('user_name'));
         
-        if (player_status == 1 || player_status == 2) // 游戏中或者等待中
+        if (player_status == GAME_PLAY || player_status == GAME_WAIT) // 游戏中或者等待中
         {
             socket.emit('leave');
-            player_status = 0;
+            player_status = GAME_VISIT;
         }
 
         $('#name_input').off('blur');
@@ -68,7 +68,7 @@
             });
         });
 
-        player_status = 0;
+        player_status = GAME_VISIT;
     })();
 
 
