--- a/view/index.html
+++ b/view/index.html
@@ -103,13 +103,6 @@
                 white-space: nowrap;
             }
 
-            /*a:hover #bg1{ background: #539770; }
-            a:hover #bg2{ background: #4B7D74; }
-            a:hover #bg3{ background: #8DC2BC; }
-            a:hover #bg4{ background: #EDD6B4; }
-            a:hover #bg5{ background: #BE7467; }
-            a:hover #bg6{ background: #E2AE63; }*/
-
             .waifu {
                 left: 78%;
             }
@@ -141,12 +134,17 @@
                 </div>
                 <div class="nav">
                     <div class="a">
-                        <a href="javascript:;"><span class="span" id="bg4">游戏介绍</span></a>
+                        <a href="javascript:;"><span class="span" id="bg4">排行榜</span></a>
                     </div>  
                 </div>
                 <div class="nav">
                     <div class="a">
-                        <a href="javascript:;"><span class="span" id="bg5">开发人员</span></a>
+                        <a href="javascript:;"><span class="span" id="bg5">游戏介绍</span></a>
+                    </div>  
+                </div>
+                <div class="nav">
+                    <div class="a">
+                        <a href="javascript:;"><span class="span" id="bg6">开发人员</span></a>
                     </div>  
                 </div>
             </div>
@@ -214,7 +212,7 @@
             const GAME_VISIT = 0, GAME_PLAY = 1, GAME_WAIT = 2;
             var player_status = GAME_VISIT;  //0：未游戏  1：游戏中 2：等待中
             
-            var socket = io({autoConnect: false});
+            var socket = io();
             socket.removeAllListeners();
 
             function randomString(len) {
