--- a/view/index.html
+++ b/view/index.html
@@ -227,8 +227,6 @@
             }
 
             function nav_click1() {
-                socket.emit('leave');
-                player_status = GAME_VISIT;
                 $.pjax({
                     url: '/generals',
                     container: '#container'
@@ -246,6 +244,13 @@
                         container: '#container'
                     });
                 }
+            }
+
+            function nav_click4() {
+                $.pjax({
+                    url: '/ranking_list',
+                    container: '#container'
+                });
             }
 
             function nav_click3() {
@@ -300,6 +305,11 @@
                 $('#navmain').off('click', '#bg3');
                 $('#navmain').on('click', '#bg3', function(){
                     exit_confirm(nav_click3)
+                });
+
+                $('#navmain').off('click', '#bg4');
+                $('#navmain').on('click', '#bg4', function(){
+                    exit_confirm(nav_click4)
                 });
 
             })();
