--- a/view/chat_room.html
+++ b/view/chat_room.html
@@ -77,7 +77,7 @@
                 msg: $('#m').val()
             });
 
-            console.log('！'+ $('#m').val());
+            //console.log('！'+ $('#m').val());
             $('#m').val('');
 
             return false;
