--- a/view/index.html
+++ b/view/index.html
@@ -31,6 +31,8 @@
             }
 
             .button {
+                width:140px;
+                height: 70px;
                 font-size:2rem;
                 background-color: black;
                 color:white;
