--- a/view/chat_room.html
+++ b/view/chat_room.html
@@ -24,10 +24,15 @@
     #messages li { 
         padding: 5px 20px;
         width:85%;
+        height: 2rem;
+    }
+
+    #messages li:nth-child(even) { 
+        background-color: ivory;
     }
 
     #messages li:nth-child(odd) { 
-        background: #eee;
+        background: #fff;
     }
 
     #chat_form {
@@ -35,7 +40,6 @@
         top: 0;
         right: 15%;
         left: 10%;
-        background: #000; 
         padding: .3%;
     }
 
@@ -43,6 +47,7 @@
         border: 0; 
         width: 90%; 
         padding: 10px; 
+        background-color: cornsilk;
     }
 
     #chat_form button {
