--- a/view/index.html
+++ b/view/index.html
@@ -5,22 +5,28 @@
         <title>五子棋</title>
         <link rel="stylesheet" type="text/css" href='/live2D/waifu.css'>
         <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+
         <style type="text/css">
             * {
                 text-shadow: 1px 1px blue;
+            }
+
+            html {
+                background-color: #ECFFFF;
             }
             
             #main {
                 display: flex;
                 flex-direction: row;
                 width: 100%;
+                height: 100%;
             }
 
 
             #container {
                 display: flex;
                 flex-direction: column;
-                width: 99%
+                width: 99%;
             }
 
             
@@ -55,25 +61,20 @@
 
 
             #navmain {  
-                position: absolute;
-                width: 0px;
+                margin-top: 100px;
+                width: 0;
                 overflow: visible;
             }
 
-            #space {
-                height:100px;
+            .nav{
+                float: right;
             }
 
-            .nav{
-                display: inline-block;
-                float: right;
-                clear: both;
-            }
             .a{
                 position: relative;
                 left: 30px;
                 padding: 10px 30px 10px 60px;
-                margin: 10px;
+                margin: 1rem;
                 background: #8DC2BC;
                 x-box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.5);
                 box-shadow: 8px 0 8px -8px rgba(0, 0, 0, 0.5);
@@ -119,7 +120,6 @@
         <div id="main">
             <div id="navmain">
                 <div class="nav">
-                    <div id="space"></div>
                     <div class="a">
                         <a href="javascript:;"><span class="span" id="bg1">首页</span></a>
                     </div>  
@@ -141,12 +141,7 @@
                 </div>
                 <div class="nav">
                     <div class="a">
-                        <a href="javascript:;"><span class="span" id="bg5">游戏介绍</span></a>
-                    </div>  
-                </div>
-                <div class="nav">
-                    <div class="a">
-                        <a href="javascript:;"><span class="span" id="bg6">开发人员</span></a>
+                        <a href="javascript:;"><span class="span" id="bg5">关于</span></a>
                     </div>  
                 </div>
             </div>
@@ -248,6 +243,13 @@
                 }
             }
 
+            function nav_click3() {
+                $.pjax({
+                    url: '/chat_room',
+                    container: '#container'
+                });
+            }
+
             function nav_click4() {
                 $.pjax({
                     url: '/ranking_list',
@@ -255,9 +257,9 @@
                 });
             }
 
-            function nav_click3() {
+            function nav_click5() {
                 $.pjax({
-                    url: '/chat_room',
+                    url: '/about',
                     container: '#container'
                 });
             }
@@ -312,6 +314,11 @@
                 $('#navmain').off('click', '#bg4');
                 $('#navmain').on('click', '#bg4', function(){
                     exit_confirm(nav_click4)
+                });
+
+                $('#navmain').off('click', '#bg5');
+                $('#navmain').on('click', '#bg5', function(){
+                    exit_confirm(nav_click5)
                 });
 
             })();
