--- a/view/chat_room.html
+++ b/view/chat_room.html
@@ -24,7 +24,9 @@
     #messages li { 
         padding: 5px 20px;
         width:85%;
-        height: 2rem;
+        height: auto;
+        word-wrap:break-word;
+        word-break:break-all;
     }
 
     #messages li:nth-child(even) { 
@@ -56,6 +58,8 @@
         border: none; 
         padding: 10px;  
         margin: .3%; 
+        word-break : break-all; 
+        word-wrap: break-word;
     }
 
 
