--- a/view/generals.html
+++ b/view/generals.html
@@ -1,10 +1,18 @@
 <style type="text/css">
-    .generals_title {
-        display: flex;
-        justify-content: center;
+    #generals_title {
+        position: absolute;
+        text-align: center;
+        font-size: 3rem;
+        top: 36%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 
-    .generals_main_title {
+    #generals_main_title {
         margin-top:12%;
         font-size: 4rem;
         color: black;
@@ -14,14 +22,22 @@
     }
     
     #div_name_input {
-        display: flex;
-        justify-content: center;
         margin-top: 1%;
         margin-bottom: 3%;
+        position: absolute;
+        text-align: center;
+        font-size: 3rem;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 
     #name_input {
-        width:40%;
+        width:100%;
         height: 50px;
         font-size: 2rem;
         text-align:center;
@@ -34,11 +50,24 @@
         text-shadow: 1px 1px lightblue;
     }
 
+    #start_button {
+        position: absolute;
+        text-align: center;
+        font-size: 3rem;
+        top: 65%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
 </style>
 
-<div class="generals_title"><h1 class="generals_main_title">五&nbsp;&nbsp;&nbsp;子&nbsp;&nbsp;&nbsp;棋</h1></div>
+<div id="generals_title"><h1 id="generals_main_title">五&nbsp;&nbsp;&nbsp;子&nbsp;&nbsp;&nbsp;棋</h1></div>
 <div id="div_name_input"><input id="name_input" style='text' placeholder="请输入您的昵称" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的昵称'"></input></div>
-<div class="div_button"><button class="button">START</button></div>
+<div id="start_button" class="div_button"><button class="button">START</button></div>
 
 <script>
 
